<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.purdue.YL.MainActivity" >

    <TextView
        android:id="@+id/tv_host"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/host"
        android:textSize="@dimen/title_size"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_host"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/tv_host"
        android:layout_marginRight="@dimen/margin_right"
        android:layout_toRightOf="@id/tv_host"
        android:padding="@dimen/padding"
        android:text="@string/default_host"
        android:textSize="@dimen/text_size_medium"
        android:inputType="textNoSuggestions" />

    <TextView
        android:id="@+id/tv_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding"
        android:layout_alignLeft="@id/tv_host"
        android:layout_below="@id/tv_host"
        android:layout_marginTop="@dimen/margin_line"
        android:text="@string/port"
        android:textSize="@dimen/title_size"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_port"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/tv_port"
        android:layout_alignLeft="@id/et_host"
        android:layout_alignRight="@id/et_host"
        android:layout_toRightOf="@id/tv_port"
        android:text="@string/default_port"
        android:inputType="number"
        android:textSize="@dimen/text_size_medium" />

</RelativeLayout>